// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ReadMarker > renders the current read marker 1`] = `
<div>
  <ul>
    <li
      class="readMarker"
      data-scroll-tokens="$event"
    >
      <hr
        class="line"
      />
    </li>
  </ul>
</div>
`;

exports[`ReadMarker > renders the ghost read marker 1`] = `
<div>
  <ul>
    <li
      class="readMarker"
    >
      <hr
        class="line"
        data-eventid="$event"
      />
    </li>
  </ul>
</div>
`;

exports[`ReadMarker > renders the hidden current read marker without a line 1`] = `
<div>
  <ul>
    <li
      class="readMarker"
      data-scroll-tokens="$event"
    />
  </ul>
</div>
`;
